--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Masih Bingung Mau isi apa</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -36,5 +36,5 @@
     </footer>
 </body>
 </html>
-<!DOCTYPE html><html><head><title>My Website</title></head><body><h1>Hello, world!</h1></body></html>
+<!DOCTYPE html><html><head><title>My Website</title></head><body><h1>HaloGaes</h1></body></html>
 
