--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ngetes</title>
+    <title>superlight_project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Masih Bingung Mau isi apa</h1>
+        <h1>belum ada isinya</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
